# cold-glass-acm

./: .gitignore  .gitmodules  README.md
cgb_model/: cgb_utils.py  cgbmodel.py  md_layer.py  panel_predictor.py  requirements.txt
cgb_sim_reader/: CMakeLists.txt  cereal_eigen.h  cgb_cereal.h  cgb_sim_reader.cpp  shell_data.h  shell_model.h  shell_options.h
data/sim_data/: final_shell.json
